encounter template config
